--- a/views/categories-menu.html
+++ b/views/categories-menu.html
@@ -1,1 +1,1 @@
-<li><a href="/categories/4">Android</a></li><li><a href="/categories/5">Apple</a></li><li><a href="/categories/6">Motorola</a></li><li><a href="/categories/7">Samsung</a></li>
+<li><a href="/categories/11">Ração Aves</a></li><li><a href="/categories/10">Ração Cachorros</a></li><li><a href="/categories/9">Ração Gatos</a></li>
