--- a/views/header.html
+++ b/views/header.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <!--
-    Hcode Store by hcode.com.br
+    Ecommerce Store by jordylucas_1@hotmail.com
 -->
 <html lang="pt-br">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hcode Store</title>
+    <title>E-Commerce Pet</title>
     
     <!-- Google Fonts -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
