--- a/views/footer.html
+++ b/views/footer.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <div class="footer-about-us">
-                        <h2>E-Commerce Pet</h2>
+                        <h2>Pets Hot</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus vero quam laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni at?</p>
                         <div class="footer-social">
                             <a href="https://www.facebook.com/jordy.lucas1" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -18,8 +18,8 @@
                     <div class="footer-menu">
                         <h2 class="footer-wid-title">Navegação </h2>
                         <ul>
-                            <li><a href="#">Minha Conta</a></li>
-                            <li><a href="#">Meus Pedidos</a></li>
+                            <li><a href="/profile">Minha Conta</a></li>
+                            <li><a href="/profile/orders">Meus Pedidos</a></li>
                             <li><a href="#">Lista de Desejos</a></li>
                         </ul>                        
                     </div>
@@ -37,11 +37,11 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="footer-newsletter">
                         <h2 class="footer-wid-title">Newsletter</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus!</p>
+                        <p>Receba nossas melhores promoções e descontos exclusivos por e-mail, faça parte da nossa newsletter!</p>
                         <div class="newsletter-form">
                             <form action="#">
-                                <input type="email" placeholder="Type your email">
-                                <input type="submit" value="Subscribe">
+                                <input type="email" placeholder="Ponha seu e-mail aqui">
+                                <input type="submit" value="Inscrever-se">
                             </form>
                         </div>
                     </div>
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright">
-                        <p>&copy; 2017 Site Ecommerce. <a href="http://www.google.com.br" target="_blank">www.ecommerce.com.br</a></p>
+                        <p>&copy; 2017 Pets Hot. <a href="http://www.pets-hot.com.br" target="_blank">pets-hot.com.br</a></p>
                     </div>
                 </div>
                 
