detalhes do layout

--- a/views/footer.html
+++ b/views/footer.html
@@ -5,7 +5,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="footer-about-us">
                         <h2>Pets Hot</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis sunt id doloribus vero quam laborum quas alias dolores blanditiis iusto consequatur, modi aliquid eveniet eligendi iure eaque ipsam iste, pariatur omnis sint! Suscipit, debitis, quisquam. Laborum commodi veritatis magni at?</p>
+                        <p>Empresa com tradição a mais de 10* anos, desde 2017 no seguimento de produtos para animais de todas as raças cores e tamanhos. Vendas por atacado e varejo. Na verdade, eu só quero passar no tcc da faculdade.</p>
                         <div class="footer-social">
                             <a href="https://www.facebook.com/jordy.lucas1" target="_blank"><i class="fa fa-facebook"></i></a>
                             <a href="https://twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
