Admin - User - Search e Pagination

--- a/views/header.html
+++ b/views/header.html
@@ -49,6 +49,7 @@
                             {else}
                             <li><a href="/login"><i class="fa fa-lock"></i> Login</a></li>
                             {/if}
+                            <li><a href="/admin"><i class="fa fa-folder-open"></i> Admin</a></li>
                         </ul>
                     </div>
                 </div>
