--- a/views/admin/order.html
+++ b/views/admin/order.html
@@ -66,7 +66,7 @@
                     <th>Qtd</th>
                     <th>Produto</th>
                     <th>Código #</th>
-                    <th>Subtotal</th>
+                    <th>Preço Unid.</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -75,7 +75,7 @@
                     <td>{$value.nrqtd}</td>
                     <td>{$value.desproduct}</td>
                     <td>{$value.idproduct}</td>
-                    <td>R${function="formatPrice($order.vltotal)"}</td>
+                    <td>R${function="formatPrice($value.vlprice)"}</td>
                 </tr>
                 {/loop}
                 </tbody>
