--- a/views/header.html
+++ b/views/header.html
@@ -112,7 +112,16 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Home</a></li>
-                        <li><a href="#">Produtos</a></li>
+                        <li class="dropdown">
+                            <a class="dropdown-toggle" type="button" data-toggle="dropdown">Produtos
+                                <span class="caret"></span>
+                            </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/categories/11">Ração Aves</a></li>
+                                    <li><a href="/categories/10">Ração Cachorros</a></li>
+                                    <li><a href="/categories/9">Ração Gatos</a></li>
+                              </ul>
+                        </li>
                         <li><a href="/cart">Carrinho</a></li>
                     </ul>
                 </div>  
