--- a/views/header.html
+++ b/views/header.html
@@ -117,9 +117,7 @@
                                 <span class="caret"></span>
                             </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/categories/11">Ração Aves</a></li>
-                                    <li><a href="/categories/10">Ração Cachorros</a></li>
-                                    <li><a href="/categories/9">Ração Gatos</a></li>
+                                    {include="categories-menu"}
                               </ul>
                         </li>
                         <li><a href="/cart">Carrinho</a></li>
