adicionando descrição produtos

--- a/views/admin/products-create.html
+++ b/views/admin/products-create.html
@@ -51,7 +51,15 @@
             </div>
             <div class="form-group">
               <label for="desurl">URL</label>
-              <input type="text" class="form-control" id="desurl" name="desurl">
+              <input type="text" class="form-control" id="desurl" name="desurl" placeholder="Digite a URL do produto">
+            </div>
+            <div class="form-group">
+              <label for="descriptup">Descrição Principal</label>
+              <textarea type="textarea" class="form-control" rows="8" id="descriptup" name="descriptup" placeholder="Digite a descrição principal"></textarea>
+            </div>
+            <div class="form-group">
+              <label for="descriptdown">Descrição Secundária</label>
+              <textarea type="textarea" class="form-control" rows="4" id="descriptdown" name="descriptdown" placeholder="Digite a descrição secundária"></textarea>
             </div>
           </div>
           <!-- /.box-body -->
