--- a/views/header.html
+++ b/views/header.html
@@ -9,10 +9,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pets Hot</title>
     
-    <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
+        <!-- Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,200,300,700,600' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Raleway:400,100' rel='stylesheet' type='text/css'>
     
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/res/site/css/bootstrap.min.css">
@@ -111,16 +111,14 @@
                 </div> 
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="active"><a href="/">Home</a></li>
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" type="button" data-toggle="dropdown">Produtos
-                                <span class="caret"></span>
-                            </a>
+                        <li class="active"><a class="btn" href="/">Home</a></li>
+
+                        <li class="btn dropdown" href="#"><div class="btn dropdown" data-toggle="dropdown">Produtos<span class="caret"></span></div>
                                 <ul class="dropdown-menu">
                                     {include="categories-menu"}
                               </ul>
                         </li>
-                        <li><a href="/cart">Carrinho</a></li>
+                        <li><a class="btn" href="/cart">Carrinho</a></li>
                     </ul>
                 </div>  
             </div>
