--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -22,7 +22,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect.
   -->
-  <link rel="stylesheet" href="/res/admin/dist/css/skins/skin-blue.min.css">
+  <link rel="stylesheet" href="/res/admin/dist/css/skins/skin-green.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +51,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-blue sidebar-mini">
+<body class="hold-transition skin-green sidebar-mini">
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -60,9 +60,9 @@ desired effect
     <!-- Logo -->
     <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>PET</b></span>
+      <span class="logo-mini"><b>Site</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>PETS</b>HOT</span>
+      <span class="logo-lg"><b>Voltar</b></span>
     </a>
 
     <!-- Header Navbar -->
@@ -76,7 +76,7 @@ desired effect
         <ul class="nav navbar-nav">
           <!-- Home: Home button-->
           <li class="button button-menu">
-            <a href="/" class="btn btn-primary">
+            <a href="/admin" class="btn btn-success">
               <i class="fa fa-home fa-lg"></i>
             </a>
           </li>
@@ -146,17 +146,17 @@ desired effect
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="/res/admin/dist/img/logo_pet.png" class="user-image" alt="User Image">
+              <img src="/res/admin/dist/img/logo.png" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Pets-Hot</span>
+              <span class="hidden-xs">Revitale Import</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="/res/admin/dist/img/logo_pet.png" class="img-circle" alt="User Image">
+                <img src="/res/admin/dist/img/logo.png" class="img-circle" alt="User Image">
 
                 <p>
-                  Pets-Hot Petstore
+                  Revitale Import
                   <small>Member since Nov. 2012</small>
                 </p>
               </li>
@@ -203,12 +203,11 @@ desired effect
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="/res/admin/dist/img/logo_pet.png" class="img-circle" alt="User Image">
+          <img src="/res/admin/dist/img/logo.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Pets-Hot</p>
+          <p>Revitale Import</p>
           <!-- Status -->
-          <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
         </div>
       </div>
 
@@ -229,9 +228,10 @@ desired effect
         <li class="header">HEADER</li>
         <!-- Optionally, you can add icons to the links -->
         <li><a href="/admin/users"><i class="fa fa-users"></i> <span>Usuarios</span></a></li>
-        <li><a href="/admin/categories"><i class="fa fa-list-ul"></i> <span>Categorias</span></a></li>
+        <li><a href="/admin/categories"><i class="fa fa-list"></i> <span>Categorias</span></a></li>
         <li><a href="/admin/products"><i class="fa fa-money"></i> <span>Produtos</span></a></li>
         <li><a href="/admin/orders"><i class="fa fa-shopping-cart"></i> <span>Pedidos</span></a></li>
+        <li><a href="/admin"><i class="fa fa-line-chart"></i> <span>Relatórios</span></a></li>
 
 
       </ul>
