--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -22,7 +22,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
         page. However, you can choose any other skin. Make sure you
         apply the skin class to the body tag so the changes take effect.
   -->
-  <link rel="stylesheet" href="/res/admin/dist/css/skins/skin-green.min.css">
+  <link rel="stylesheet" href="/res/admin/dist/css/skins/skin-blue.min.css">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -51,7 +51,7 @@ desired effect
 |               | sidebar-mini                            |
 |---------------------------------------------------------|
 -->
-<body class="hold-transition skin-green sidebar-mini">
+<body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper">
 
   <!-- Main Header -->
@@ -62,7 +62,7 @@ desired effect
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>Site</b></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Voltar</b></span>
+      <span class="logo-lg"><b>Site</b></span>
     </a>
 
     <!-- Header Navbar -->
@@ -146,18 +146,18 @@ desired effect
             <!-- Menu Toggle Button -->
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               <!-- The user image in the navbar-->
-              <img src="/res/admin/dist/img/logo.png" class="user-image" alt="User Image">
+              <img src="/res/admin/dist/img/logo_pet.png" class="user-image" alt="User Image">
               <!-- hidden-xs hides the username on small devices so only the image appears. -->
-              <span class="hidden-xs">Revitale Import</span>
+              <span class="hidden-xs">Pets-Hot</span>
             </a>
             <ul class="dropdown-menu">
               <!-- The user image in the menu -->
               <li class="user-header">
-                <img src="/res/admin/dist/img/logo.png" class="img-circle" alt="User Image">
+                <img src="/res/admin/dist/img/logo_pet.png" class="img-circle" alt="User Image">
 
                 <p>
-                  Revitale Import
-                  <small>Member since Nov. 2012</small>
+                  Pets-Hot
+                  <small>Member since Nov. 2017</small>
                 </p>
               </li>
               <!-- Menu Body -->
@@ -203,10 +203,10 @@ desired effect
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel">
         <div class="pull-left image">
-          <img src="/res/admin/dist/img/logo.png" class="img-circle" alt="User Image">
+          <img src="/res/admin/dist/img/logo_pet.png" class="img-circle" alt="User Image">
         </div>
         <div class="pull-left info">
-          <p>Revitale Import</p>
+          <p>Pets-Hot</p>
           <!-- Status -->
         </div>
       </div>
