--- a/views/admin/header.html
+++ b/views/admin/header.html
@@ -60,9 +60,12 @@ desired effect
     <!-- Logo -->
     <a href="/" class="logo">
       <!-- mini logo for sidebar mini 50x50 pixels -->
-      <span class="logo-mini"><b>Site</b></span>
+      <span class="logo-mini"><i class="fa fa-reply" aria-hidden="true"></i></span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Site</b></span>
+      <span class="logo-lg">
+        <i class="fa fa-reply" aria-hidden="true"></i>
+        <b>Site</b>
+      </span>
     </a>
 
     <!-- Header Navbar -->
@@ -76,7 +79,7 @@ desired effect
         <ul class="nav navbar-nav">
           <!-- Home: Home button-->
           <li class="button button-menu">
-            <a href="/admin" class="btn btn-success">
+            <a href="/admin" class="btn btn-primary">
               <i class="fa fa-home fa-lg"></i>
             </a>
           </li>
